# toio

./: .gitignore  Cargo.toml  README.md
examples/: connect.rs  osc.rs
src/: lib.rs  main.rs  scanner.rs  toio.rs
toio/: Cargo.toml
toio/examples/: connect.rs  osc.rs
toio/src/: lib.rs  main.rs  osc.rs  toio.rs  ui.rs
toio_processing/: events.pde  osc.pde  toio_processing.pde
