[package]
name = "toio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.10"
uuid = "1.8"
tokio = { version = "1.36", features = ["full"] } 
futures = "0.3.30"
rosc = "0.10.0"
color-eyre = "0.6.3"
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = "0.26.1"
tokio-util = "0.7.10"
clap = { version = "4.4", features = ["derive"] }

[profile.dev]
opt-level = 3
debug = 1


[profile.release]
debug = 1